# fastapi-starter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: pre_commit_hooks.yaml
docs/: ALEMBIC_MIGRATIONS_GUIDE.md  FASTAPI_ARCHITECTURE_GUIDE.md  SOFTWARE_ENGINEERING_PRINCIPLES.md
migrations/: env.py  script.py.mako
migrations/versions/: 09136e041378_initial_migration_with_tables.py  7388b797f667_initial_migration.py  7a210586a798_initial_migration.py  8ab29f1aeef5_initial_migration.py  ac6e6e84ac44_add_pending_verification_token_to_users_.py
scripts/: docker-entrypoint.sh
src/: main.py
src/api/v1/dependencies/: authentication.py  authorization.py  database.py  services.py
src/api/v1/models/: user.py  workspace.py  workspace_member.py
src/api/v1/repositories/: base.py  user.py  workspace.py
src/api/v1/routers/: auth.py  users.py  workspaces.py
src/api/v1/schemas/: auth.py  common.py  shared.py  user.py  workspace.py
src/api/v1/services/: auth.py  user.py  workspace.py
src/app/: __init__.py  main.py
src/app/api/v1/: __init__.py
src/app/api/v1/dependencies/: authentication.py  authorization.py  database.py  services.py
src/app/api/v1/routers/: auth.py  users.py  workspaces.py
src/app/auth/: __init__.py  router.py  schemas.py  service.py
src/app/core/: base.py  common.py  config.py  database.py  exception_handlers.py  exceptions.py  security.py  shared.py
src/app/users/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/app/workspaces/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/core/: config.py  database.py  exception_handlers.py  exceptions.py  security.py
